tests/language_modules/03_import_resolution/fixtures/invalid/imported_module_not_sibling/App/Banking/Proofs.vf
module Banking.Proofs

function balance_never_negative() returns Boolean
is
    return true
end balance_never_negative

end Banking.Proofs